--- a/FRONTEND/app/src/main/res/layout/activity_adult_login.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_adult_login.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/bgpattern"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,16 +14,17 @@
 
 
         <EditText
-            android:id="@+id/adultlogin_edittext_id"
+            android:id="@+id/adult_login_edittext_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:gravity="center"
             android:text="admin@admin.com"
-            android:hint="이메일을 입력해 주세요" />
+            android:hint="이메일을 입력해 주세요"
+            />
 
         <EditText
-            android:id="@+id/adultlogin_edittext_pw"
+            android:id="@+id/adult_login_edittext_pw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -36,16 +37,16 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/adultlogin_button_login"
+                android:id="@+id/adult_login_button_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="로그인" />
+                android:text="로그인"/>
 
             <Button
-                android:id="@+id/adultlogin_button_join"
+                android:id="@+id/adult_login_button_join"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="회원 등록" />
+                android:text="회원 등록"/>
         </LinearLayout>
     </LinearLayout>
 
