--- a/FRONTEND/app/src/main/res/layout/activity_board_detail.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_board_detail.xml
@@ -4,103 +4,113 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bgpattern"
     android:orientation="vertical"
     tools:context="kidskeeper.sungshin.or.kr.kikee.Adult.Community.BoardDetailActivity">
 
-        <TableLayout
-            android:id="@+id/board_content_Penal"
-            android:layout_width="match_parent"
-            android:layout_height="200dp">
-            <TableRow>
+    <TableLayout
+        android:id="@+id/board_content_Penal"
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
+
+        <TableRow>
+
             <TextView
                 android:id="@+id/board_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="제목입니다" />
-            </TableRow>
-            <TableRow>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="nickname" />
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
-                <TextView
-                    android:id="@+id/board_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:text="날짜입니다." />
-            </TableRow>
+        </TableRow>
+
+        <TableRow>
+
             <TextView
-                android:id="@+id/board_content"
-                android:layout_width="match_parent"
-                android:layout_height="140dp"
-                android:text="내용입니다." />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right">
-
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:background="@drawable/friends"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" : 4" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:background="@drawable/like" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" : 8" />
-            </LinearLayout>
-        </TableLayout>
-        <ListView
-            android:id="@+id/comment_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-            android:layout_below="@+id/board_content_Penal"
-            android:layout_above="@+id/comment_enter">
-
-        </ListView>
-        <LinearLayout
-            android:id="@+id/comment_enter"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:layout_alignParentBottom="true">
-
-            <Button
-                android:id="@+id/like_btn"
-                android:layout_width="20dp"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:background="@drawable/like" />
-
-            <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:text="댓글을 입력해 주세요" />
+                android:text="nickname" />
 
-            <Button
-                android:layout_width="30dp"
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/board_date"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="ok" />
+                android:layout_gravity="right"
+                android:text="날짜입니다." />
+        </TableRow>
+
+        <TextView
+            android:id="@+id/board_content"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:text="내용입니다." />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/friends" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" : 4" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/like" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" : 8" />
         </LinearLayout>
+    </TableLayout>
+
+    <ListView
+        android:id="@+id/comment_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/comment_enter"
+        android:layout_below="@+id/board_content_Penal">
+
+    </ListView>
+
+    <LinearLayout
+        android:id="@+id/comment_enter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
+
+        <Button
+            android:id="@+id/like_btn"
+            android:layout_width="20dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"
+            android:background="@drawable/like" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:text="댓글을 입력해 주세요" />
+
+        <Button
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="ok" />
+    </LinearLayout>
 </RelativeLayout>
