--- a/FRONTEND/app/src/main/res/layout/activity_board_write.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_board_write.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="kidskeeper.sungshin.or.kr.kikee.Adult.Community.BoardWriteActivity"
-    android:background="@color/colorWhite">
+    android:background="@drawable/bgpattern">
 
     <TextView
         android:layout_width="fill_parent"
@@ -18,8 +18,8 @@
         android:layout_margin="14dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:textColor="@color/colorWhite"
+        android:background="@color/colorWhite"
+        android:textColor="@string/Kcolor1"
         android:hint="제목을 입력해주세요" />
     <TextView
         android:layout_width="fill_parent"
@@ -30,10 +30,10 @@
         android:layout_height="200dp"
         android:id="@+id/writeContext"
         android:layout_margin="10dp"
-        android:background="#B2CCFF"
+        android:background="@color/colorWhite"
         android:gravity="top|start"
-        android:hint="내용을 입력해주세요"
-        />
+        android:textColor="@string/Kcolor1"
+        android:hint="내용을 입력해주세요" />
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="3dp"
