--- a/FRONTEND/app/src/main/res/layout/activity_board_detail.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_board_detail.xml
@@ -18,7 +18,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="제목  " />
+                android:text="제목  "
+                android:textColor="@color/colorPrimary" />
 
             <TextView
                 android:id="@+id/board_detail_title"
@@ -31,7 +32,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="작성자  " />
+                android:text="작성자  "
+                android:textColor="@color/colorPrimary" />
 
             <TextView
                 android:id="@+id/board_detail_nickname"
@@ -53,7 +55,7 @@
         <TextView
             android:id="@+id/board_detail_content"
             android:layout_width="match_parent"
-            android:layout_height="140dp" />
+            android:layout_height="130dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -74,6 +76,7 @@
                 android:text="" />
 
             <ImageView
+                android:id="@+id/board_detail_like_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="3dp"
@@ -88,7 +91,7 @@
     </TableLayout>
 
     <ListView
-        android:id="@+id/comment_list"
+        android:id="@+id/comment_listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/comment_enter"
@@ -101,23 +104,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_margin="10dp"
         android:focusable="true"
         android:focusableInTouchMode="true">
 
-        <Button
-            android:id="@+id/like_btn"
-            android:layout_width="20dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/like" />
 
         <EditText
+            android:id="@+id/board_detail_comment_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="5"
             android:hint="댓글을 입력해 주세요" />
 
         <Button
+            android:id="@+id/board_detail_comment_write_button"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
