--- a/FRONTEND/app/src/main/res/layout/activity_login.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bgpattern"
+
     tools:context="kidskeeper.sungshin.or.kr.kikee.Home.LoginActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+
+        <EditText
+            android:id="@+id/adult_login_edittext_id"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:background="#8DC0E5"
+            android:gravity="center"
+            android:hint="이메일을 입력해 주세요"
+            android:text="admin@admin.com"
+            android:textColor="@color/colorWhite" />
+
+        <EditText
+            android:id="@+id/adult_login_edittext_pw"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:background="#8DC0E5"
+            android:gravity="center"
+            android:hint="로봇 비밀번호를 입력해 주세요"
+            android:text="1234"
+            android:textColor="@color/colorWhite" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/adult_login_button_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/round_background"
+                android:text="로그인"
+                android:textColor="@color/colorWhite" />
+
+            <Button
+                android:id="@+id/adult_login_button_join"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/round_background"
+                android:text="회원 등록"
+                android:textColor="@color/colorWhite" />
+        </LinearLayout>
+    </LinearLayout>
+
+</LinearLayout>
