--- a/FRONTEND/app/src/main/res/layout/fragment_adult_home.xml
+++ b/FRONTEND/app/src/main/res/layout/fragment_adult_home.xml
@@ -1,8 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#FFF3F0"
     android:layout_height="match_parent"
+    android:background="#FFF3F0"
     android:orientation="vertical"
     tools:context="kidskeeper.sungshin.or.kr.kikee.Adult.AdultHome.AdultHomeFragment">
 
@@ -29,14 +29,19 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        android:padding="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="인기글" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/adultHome__recyclerview_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            tools:listitem="@layout/item_todolist">
+
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 </LinearLayout>
